# FixedPointNumbers

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: bithelper.hpp  fixed.hpp  fixed.inl  fixed_math.hpp  fixed_math.inl  fixed_string.inl  integer_bits.hpp
include_glm/: fixed_glm.hpp
lib/: CMakeLists.txt
src/: all_types.cpp  fixed.cpp  fixed.hpp  fixed.inl  fixed_conversion.cpp  fixed_math.inl  floating_point.cpp  general.cpp  integer_bits.hpp  math.cpp  math_functions.cpp  math_operators.cpp  string.cpp  test.cpp
